# bfactory

./: .gitignore  LICENSE  README.md  __init__.py  banners.py  bfactory.py  requirements.txt  settings.py  setup.cfg  test.sh
docs/: MANIFEST.md
engine/: engine.py  render.py  tasks.py
engine/templates/: models.py  myconf.py  selectors.py  urls.py  views.py
inputdata/: manifest.py
src/: bfactory.py  dev.py
src/bfactory/: bfactory.py  main.py
src/bfactory/cli/: django_cli.py
src/bfactory/config/: settings.py
src/bfactory/core/: engine.py  tasks.py
src/bfactory/core/templates/: READ.ME  admin.py  models.py  myconf.py  selectors.py  services.py  urls.py  views.py
src/bfactory/core/templates/helpers/: field.py  field_serializer.py  field_type_linting.py
src/bfactory/engine/: engine.py  render.py  tasks.py
src/bfactory/engine/templates/: admin.py  services.py
src/bfactory/engine/templates/helpers/: field.py  field_serializer.py
src/bfactory/inputs/: arguments.py  manifest.py  manifest.schema.json  parse_manifest.py  validators.py
src/bfactory/startproject/: startproject.py
src/bfactory/tests/: engine_tests.py  jsonschema_test.py  manifest_test.json  manifest_test.py  run_tests.py
src/bfactory/utils/: paths.py  render.py  state.py
startproject/: startproject.py
tests/: engine_tests.py  manifest_test.json  manifest_test.py  run_tests.py
utils/: crypto.py  paths.py
