[metadata]
name = bfactory
version = attr: bfactory.config.settings.__version__
url = https://github.com/forkear/bfactory
author = Forkear
author_email = forkear@no-spam.org
description = Build an API from a manifest file
long_description = Visit https://github.com/forkear/bfactory/blob/main/README.md
long_description_content_type = text/x-rst
project_urls =
    Documentation = https://github.com/forkear/bfactory/blob/main/README.md
    Source = https://github.com/forkear/bfactory
    Tracker = https://github.com/forkear/bfactory/issues

[options]
#include_package_data = True
python_requires = >=3.8
install_requires =
    Django==4.1
    djangorestframework==3.13.1
    djangorestframework-simplejwt==5.2.0
    Jinja2==3.1.2

[options.entry_points]
console_scripts =
    bfactory = bfactory.main:main

[options.package_data]
* = *.txt, *.rst, *.json, READ.ME
